Add USGS Data import
Import flow/stage data